[project]
name = "asset-analyzer"
version = "0.1.0"
description = "LangGraph supervisor + 5 sub-agents implementation of the Claude-Code crypto analysis skill set."
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-tavily>=0.2.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.10.0",
]

[project.optional-dependencies]
google = ["langchain-google-genai>=2.0.0"]
ollama = ["langchain-ollama>=0.2.0"]
community-tavily = ["langchain-community>=0.3.0", "tavily-python>=0.5.0"]
dev = ["mypy>=1.11.0", "ruff>=0.6.0"]

[project.scripts]
asset-analyzer = "analyzer.main:main"

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["analyzer"]

[tool.setuptools.package-data]
analyzer = []
